# Head_Unit

API_prototype/: .mainwindow.ui.swo  .mainwindow.ui.swp  .resources.qrc.swp  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.html  resources.qrc
Function_Prototpye/Audio/: README.md
Function_Prototpye/Audio/build-mp3_test-Desktop-Debug/: CMakeCache.txt  mp3_test.cbp
Function_Prototpye/Audio/build-mp3_test-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-b166cc776ee2bfff77ca.json  index-2024-10-01T14-34-22-0614.json  target-mp3_test_autogen-Debug-e92c0aa2861415572809.json
Function_Prototpye/Audio_Prototype/build-mp3_test-Desktop-Debug/: Makefile  cmake_install.cmake  extract_cover.py  mp3_test
Function_Prototpye/Audio_Prototype/build-mp3_test-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7ce4ae77d61e6ce70998.json  codemodel-v2-d7035f925400852b5e5b.json  target-mp3_test-Debug-a37f8442673e84e72362.json
Function_Prototpye/Audio_Prototype/build-mp3_test-Desktop-Debug/mp3_test_autogen/EWIEGA46WW/: qrc_qml.cpp
Function_Prototpye/Audio_Prototype/mp3_test/: CMakeLists.txt  extract_cover.py  main.qml  mp3player.cpp  mp3player.h  usbscanner.cpp  usbscanner.h
